--- a/public/index.html
+++ b/public/index.html
@@ -1,35 +1,18 @@
 <!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./style.css">
-    <title>Garea.js</title>
-</head>
-<body>
-<div style="position: relative">
-    <img id="image" src="./image.jpeg" alt="image">
-    <canvas id="crop" width="600" height="400"></canvas>
-</div>
-<script src="../src/draw.js"></script>
-<script src="../src/core.js"></script>
-<script>
-    window.onload = () => {
-        const crop = new Core('crop');
-        crop.addDraw('area', {});
-        const area = crop.getDraw('area');
-        area.onListener('onmousedown', event => {
-           console.log('onmousedown', event);
-        }).onListener('onchange', event => {
-            console.log('onchange', event);
-        }).onListener('onmouseup', event => {
-            console.log('onmouseup', event);
-        });
-        crop.setEdit('area');
-        crop.create();
-    }
-</script>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport"
+              content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link rel="stylesheet" href="./style.css">
+        <title>Garea.js</title>
+    </head>
+    <body>
+        <div id="container">
+            <img id="image" src="./image.jpg" alt="image">
+            <canvas id="crop" width="800" height="400"></canvas>
+        </div>
+        <script type="module" src="./bundle.js"></script>
+    </body>
 </html>
